--- a/styles/main.css
+++ b/styles/main.css
@@ -19,14 +19,16 @@ a:hover{
 }
 
 section, footer, header, aside, nav{
-	display: block;
+	display: inline-block;
 }
 
 /*-------------------------
 	The menu
 --------------------------*/
 
-
+nav {
+	width: 100%;
+}
 
 nav a:first-child{
 	border-radius:2px 0 0 2px;
@@ -41,6 +43,18 @@ nav.two .two,
 nav.three .three,
 nav.four .four{
 	background-color:#e35885;
+}
+
+.navbar .nav > li {
+    float:none;
+    display:inline-block;
+    *display:inline; /* Internet Explorer 7 compatibility */
+    *zoom:1;
+    vertical-align: top;
+}
+
+.navbar {
+	margin-bottom:0px;
 }
 
 p{
